Make use of cleaned up APIs
The InMemoryScimFilterMatcher should be moved into another module for reuse
Actual Implementations would not be able to make use of this class, but it works well for testing API changes and demo projects